--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9"
+//    testImplementation "org.mockito:mockito-core:2.21.0"
+//    testImplementation 'org.mockito:mockito-inline:2.21.0'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
