--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,14 @@ android {
     buildFeatures {
         dataBinding true
     }
+    testOptions.unitTests {
+        includeAndroidResources = true
+        returnDefaultValues = true
+    }
+    packagingOptions {
+        pickFirst  'META-INF/*'
+        pickFirst '**/META-INFMANIFEST.MF'
+    }
 }
 
 dependencies {
