--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,9 @@ dependencies {
     implementation project(path: ':data')
     implementation project(path: ':domain')
 
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9"
     testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
