--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,10 @@ dependencies {
     
     implementation project(path: ':data')
     implementation project(path: ':domain')
+//    testImplementation project(path: ':domain')
+//    testImplementation files(project(':domain').sourceSets.test.output.classesDir)
+//    testImplementation project(':domain').sourceSets.test.output
+    testImplementation project(path: ':domain', configuration: 'unitTestArtifact')
 
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
