--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,9 @@ dependencies {
 //    testImplementation files(project(':domain').sourceSets.test.output.classesDir)
 //    testImplementation project(':domain').sourceSets.test.output
     testImplementation project(path: ':domain', configuration: 'unitTestArtifact')
+//    testImplementation "org.mockito:mockito-android:2.28.2"
+//    testImplementation "org.mockito:mockito-core:2.28.2"
+//    testImplementation "org.mockito:mockito-inline:2.28.2"
 
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
