--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'androidx.navigation.safeargs'
+    id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-android-extensions'
 }
 
@@ -90,25 +90,46 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation 'junit:junit:4.12'
 
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
-    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9"
-    debugImplementation "androidx.fragment:fragment-testing:1.2.5"
+//    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+//    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9"
+//    debugImplementation "androidx.fragment:fragment-testing:1.2.5"
     debugImplementation 'androidx.test:core:1.3.0'
 //    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.3.0"
-    androidTestImplementation "androidx.test.espresso:espresso-intents:3.3.0"
-    androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:3.3.0"
-    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+//    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.3.0"
+//    androidTestImplementation "androidx.test.espresso:espresso-intents:3.3.0"
+//    androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:3.3.0"
+//    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 //    androidTestImplementation "androidx.test:runner:1.3.0"
     androidTestImplementation 'org.mockito:mockito-android:2.28.2'
 //    androidTestImplementation "org.mockito:mockito-core:2.28.2"
 //    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.12.1"
 //    androidTestImplementation project(path: ':domain', configuration: 'unitTestArtifact')
 
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test:rules:1.3.0'
+
+
+    androidTestImplementation "androidx.test:core-ktx:1.3.0"
+    androidTestImplementation "androidx.test.ext:junit-ktx:1.1.2"
+    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9"
+    androidTestImplementation "androidx.test:rules:1.3.1-alpha02"
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+    androidTestImplementation "org.robolectric:annotations:4.3-beta-1"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.3.0"
+    androidTestImplementation "androidx.test.espresso:espresso-intents:3.3.0"
+    androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:3.3.0"
+//    androidTestImplementation "junit:junit:4.12"
+    // Once https://issuetracker.google.com/127986458 is fixed this can be testImplementation
+    debugImplementation "androidx.fragment:fragment-testing:1.2.5"
+    implementation "androidx.test:core:1.3.0"
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
+//    androidTestImplementation "org.mockito:mockito-core:2.28.2"
+//    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.12.1"
+
+
+//    androidTestImplementation 'androidx.test:runner:1.3.0'
+//    androidTestImplementation 'androidx.test:rules:1.3.0'
 //    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
 //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 //    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
