--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,7 @@ android {
     }
 
     sourceSets {
-        /*androidTest.java.srcDirs += ["${project(':domain').projectDir}/src/androidTest/java"]*/
+        androidTest.java.srcDirs += ["${project(':domain').projectDir}/src/androidTest/java"]
         test.java.srcDirs += ["${project(':domain').projectDir}/src/test/java"]
         androidTest.java.srcDirs += ["${project(':domain').projectDir}/src/test/java"]
 //        test.java.srcDirs += ["${project(':domain').projectDir}/src/androidTest/java"]
@@ -89,10 +89,13 @@ dependencies {
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation 'junit:junit:4.12'
+    testImplementation "androidx.test.ext:junit-ktx:1.1.2"
+    testImplementation 'androidx.test.ext:junit:1.1.2'
 
 //    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
 //    androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.9"
 //    debugImplementation "androidx.fragment:fragment-testing:1.2.5"
+//    testImplementation 'androidx.test:core:1.3.0'
     debugImplementation 'androidx.test:core:1.3.0'
 //    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -127,9 +130,13 @@ dependencies {
 //    androidTestImplementation "org.mockito:mockito-core:2.28.2"
 //    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.12.1"
 
-
-//    androidTestImplementation 'androidx.test:runner:1.3.0'
-//    androidTestImplementation 'androidx.test:rules:1.3.0'
+    //AQUII
+    /*testImplementation 'androidx.test:runner:1.3.0'
+    testImplementation 'androidx.test:rules:1.3.0'
+    testImplementation "androidx.test:core:1.3.0"
+    testImplementation "androidx.test:core-ktx:1.3.0"*/
+    testImplementation "androidx.test:rules:1.3.0"
+    testImplementation 'org.robolectric:robolectric:4.2.1'
 //    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
 //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 //    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
